--- a/menu-overflow.html
+++ b/menu-overflow.html
@@ -20,6 +20,7 @@
       max-width: 100%;
       position: relative;
       flex-wrap: nowrap;
+      color: #606990;
     }
     .menu-item {
       white-space: nowrap;
